# distributed-click

./: README.md  docker-compose.yml
client/: .gitignore  App.tsx  README.md  constant.ts  index.html  metadata.json  package-lock.json  package.json
client/components/: CounterLabel.tsx  PressButton.tsx
init-db/: init_db.sql  insert_data.sql
server/: locustfile.py  main.py  pyproject.toml  requirements.txt
server/worker/: worker.py
