[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiokafka>=0.13.0",
    "asyncpg>=0.31.0",
    "fastapi>=0.128.0",
    "locust>=2.43.1",
    "pydantic>=2.12.5",
    "redis>=7.1.0",
    "uvicorn>=0.40.0",
    "websockets>=16.0",
    "wsproto>=1.3.2",
]
